6th: fix bugs: toList